// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with checked param 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0,
.c0:after,
.c0:before,
.c0 *,
.c0 *:after,
.c0 *:before {
  box-sizing: border-box;
}

.c0 > svg {
  opacity: 0;
  position: absolute;
  left: 4px;
  top: 4px;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  pointer-events: none;
}

.c0 > input:checked ~ svg {
  opacity: 1;
}

.c0 > input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 > input + label {
  width: 32px;
  height: 16px;
  outline: 0;
  display: block;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #D1D5D7;
  border-radius: 40px;
  -webkit-transition: all 0.4s ease;
  transition: all 0.4s ease;
}

.c0 > input + label::after {
  position: relative;
  display: block;
  content: '';
  width: 12px;
  height: 12px;
  top: 2px;
}

.c0 > input + label::after {
  border-radius: 50%;
  background: #fff;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  -webkit-transform: translateX(2px);
  -ms-transform: translateX(2px);
  transform: translateX(2px);
}

.c0:hover > input + label {
  background: #47DB99;
}

.c0:hover > input:checked + label,
.c0 > input:checked + label {
  background: #1785FB;
}

.c0 > input:checked + label::after {
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

<div
  className="c0"
>
  <input
    checked={true}
    id="foo"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="foo"
  />
  <svg
    height="8"
    width="10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.315 7.858L.133 4.441a.506.506 0 0 1 0-.683l.643-.684a.437.437 0 0 1 .642 0l2.219 2.393L8.58.141a.437.437 0 0 1 .643 0l.643.683a.504.504 0 0 1 0 .683l-5.91 6.35a.437.437 0 0 1-.642 0"
      fill="#FFF"
      fillRule="evenodd"
    />
  </svg>
</div>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0,
.c0:after,
.c0:before,
.c0 *,
.c0 *:after,
.c0 *:before {
  box-sizing: border-box;
}

.c0 > svg {
  opacity: 0;
  position: absolute;
  left: 4px;
  top: 4px;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  pointer-events: none;
}

.c0 > input:checked ~ svg {
  opacity: 1;
}

.c0 > input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 > input + label {
  width: 32px;
  height: 16px;
  outline: 0;
  display: block;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #D1D5D7;
  border-radius: 40px;
  -webkit-transition: all 0.4s ease;
  transition: all 0.4s ease;
}

.c0 > input + label::after {
  position: relative;
  display: block;
  content: '';
  width: 12px;
  height: 12px;
  top: 2px;
}

.c0 > input + label::after {
  border-radius: 50%;
  background: #fff;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  -webkit-transform: translateX(2px);
  -ms-transform: translateX(2px);
  transform: translateX(2px);
}

.c0:hover > input + label {
  background: #47DB99;
}

.c0:hover > input:checked + label,
.c0 > input:checked + label {
  background: #1785FB;
}

.c0 > input:checked + label::after {
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

<div
  className="c0"
>
  <input
    checked={false}
    id="foo"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="foo"
  />
  <svg
    height="8"
    width="10"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.315 7.858L.133 4.441a.506.506 0 0 1 0-.683l.643-.684a.437.437 0 0 1 .642 0l2.219 2.393L8.58.141a.437.437 0 0 1 .643 0l.643.683a.504.504 0 0 1 0 .683l-5.91 6.35a.437.437 0 0 1-.642 0"
      fill="#FFF"
      fillRule="evenodd"
    />
  </svg>
</div>
`;
